finished, need to clean up

--- a/firebase.json
+++ b/firebase.json
@@ -31,6 +31,12 @@
     },{
       "source": "/getAllSessionsData",
       "function": "getAllSessionsData"
+    },{
+      "source": "/changeUserLevel",
+      "function": "changeUserLevel"
+    },{
+      "source": "/deleteUser",
+      "function": "deleteUser"
     }]
   }
 }
